@startuml

title __JAVA's Class Diagram__\n

  package main.java {
    class Dao {
        {static} - DRIVER_NAME : String
        {static} - URL : String
        {static} - USER_NAME : String
        {static} - PASSWORD : String
        + Dao()
        + login_authenticate()
        + register_user()
        {static} + main()
    }
  }
  

  package main.java {
    class RMIClient {
        {static} - stub : ServerAction
        + RMIClient()
        {static} + main()
        {static} - login()
        {static} - register()
    }
  }
  

  package main.java {
    class RMIServer {
        + RMIServer()
        {static} + main()
    }
  }
  

  package main.java {
    interface ServerAction {
        {abstract} + login()
        {abstract} + register()
    }
  }
  

  package main.java {
    class ServerImpl {
        + ServerImpl()
        + login()
        + register()
    }
  }
  

  ServerImpl -up-|> ServerAction
  ServerImpl -up-|> UnicastRemoteObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
